--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 eframe = "0.29"
 egui = "0.29"
+egui_extras = "0.29"
 chrono = "0.4"
 regex = "1.10"
 lazy_static = "1.4"
