--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ ram-profiling = ["dhat"]
 cpu-profiling = ["puffin", "puffin_egui"]
 
 [dependencies]
-eframe = "0.29"
-egui = "0.29"
-egui_extras = "0.29"
+eframe = "0.28"
+egui = "0.28"
+egui_extras = "0.28"
 chrono = "0.4"
 regex = "1.10"
 lazy_static = "1.4"
@@ -20,3 +20,5 @@ ahash = "0.8"
 rfd = "0.14"
 clap = { version = "4.5", features = ["derive"] }
 dhat = { version = "0.3", optional = true }
+puffin = { version = "0.19", optional = true }
+puffin_egui = { version = "0.29", optional = true }
