--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,14 @@ cpu-profiling = ["puffin", "puffin_egui"]
 eframe = "0.28"
 egui = "0.28"
 egui_extras = "0.28"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 regex = "1.10"
 lazy_static = "1.4"
 ahash = "0.8"
 rfd = "0.14"
 clap = { version = "4.5", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 dhat = { version = "0.3", optional = true }
 puffin = { version = "0.19", optional = true }
 puffin_egui = { version = "0.29", optional = true }
