--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ rfd = "0.14"
 clap = { version = "4.5", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+log = "0.4"
+env_logger = "0.11"
 dhat = { version = "0.3", optional = true }
 puffin = { version = "0.19", optional = true }
 puffin_egui = { version = "0.29", optional = true }
