ref: Handle shortcuts using keybinds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ eframe = "0.28"
 egui = "0.28"
 egui_extras = "0.28"
 egui_dock = "0.13"
+keybinds = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
 regex = "1.10"
 lazy_static = "1.4"
