--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ regex = "1.10"
 lazy_static = "1.4"
 ahash = "0.8"
 rfd = "0.14"
+dirs = "5.0"
 clap = { version = "4.5", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
