--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,9 @@ env_logger = "0.11"
 dhat = { version = "0.3", optional = true }
 puffin = { version = "0.19", optional = true }
 puffin_egui = { version = "0.29", optional = true }
+
+# Release profile optimizations
+[profile.release]
+lto = "thin"
+codegen-units = 1
+strip = true
