feat: Implement Drag and Drop

--- a/logcrab.desktop
+++ b/logcrab.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=LogCrab
 GenericName=Log Analyzer
 Comment=Intelligent log anomaly explorer with pattern matching
-Exec=logcrab %F
+Exec=env -u WAYLAND_DISPLAY <logcrab-binary> %F
 Icon=logcrab
 Terminal=false
 Categories=Development;
