--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,11 @@ puffin_egui = { version = "0.29", optional = true }
 lto = "thin"
 codegen-units = 1
 strip = true
+
+[lints.clippy]
+indexing_slicing = "deny"
+fallible_impl_from = "deny"
+wildcard_enum_match_arm = "deny"
+unneeded_field_pattern = "deny"
+fn_params_excessive_bools = "deny"
+must_use_candidate = "deny"
