--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,9 +38,23 @@ codegen-units = 1
 strip = true
 
 [lints.clippy]
+all = "warn"                     # Enable all clippy lints
+pedantic = "warn"                # Extra pedantic checks
+nursery = "warn"                 # Experimental lints
+cargo = "warn"                   # Cargo-specific lints
 indexing_slicing = "deny"
 fallible_impl_from = "deny"
 wildcard_enum_match_arm = "deny"
 unneeded_field_pattern = "deny"
 fn_params_excessive_bools = "deny"
 must_use_candidate = "deny"
+
+# Deny critical issues
+unwrap_used = "deny"             # Force proper error handling
+expect_used = "deny"             # No expect() in production code
+panic = "deny"                   # No panics in core
+todo = "deny"                    # No TODOs in releases
+
+[lints.rust]
+unsafe_code = "forbid"           # No unsafe in core modules
+missing_docs = "warn"            # All public APIs documented
