--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = "1.0"
 log = "0.4"
 env_logger = "0.11"
 dlt-core = "0.20"
+rayon = "1.10"
 dhat = { version = "0.3", optional = true }
 puffin = { version = "0.19", optional = true }
 puffin_egui = { version = "0.29", optional = true }
