ref: Some clippy fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,13 +56,19 @@ unused_self = "deny"
 redundant_closure_for_method_calls = "deny"
 doc_markdown = "warn"
 map_unwrap_or = "warn"
-too_many_lines = "warn"
+too_many_lines = "allow"
 assigning_clones = "deny"
 if_not_else = "deny"
 needless_pass_by_value = "deny"
 uninlined_format_args = "deny"
 unnecessary_semicolon = "deny"
 manual_let_else = "deny"
+needless_pass_by_ref_mut = "deny"
+explicit_iter_loop = "deny"
+cloned_instead_of_copied = "deny"
+redundant_clone = "deny"
+option_if_let_else = "deny"
+missing_const_for_fn = "deny"
 
 # Deny critical issues
 # unwrap_used = "deny"             # Force proper error handling
