feat: 1st pcap support

--- a/logcrab.desktop
+++ b/logcrab.desktop
@@ -8,6 +8,6 @@ Exec=env -u WAYLAND_DISPLAY <logcrab-binary> %F
 Icon=logcrab
 Terminal=false
 Categories=Development;
-MimeType=text/plain;text/x-log;application/x-crab;
-Keywords=log;analyzer;anomaly;debug;monitoring;
+MimeType=text/plain;text/x-log;application/x-crab;application/vnd.tcpdump.pcap;application/x-pcapng;
+Keywords=log;analyzer;anomaly;debug;monitoring;pcap;network;
 StartupNotify=true
