--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde_json = "1.0.149"
 log = "0.4.29"
 env_logger = "0.11"
 dlt-core = "0.20"
+pcap-parser = "0.15"
 rayon = "1.10"
 egui-toast = "0.19"
 dhat = { version = "0.3", optional = true }
