--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ log = "0.4.29"
 env_logger = "0.11"
 dlt-core = "0.20"
 pcap-parser = "0.15"
+btsnoop = "0.2.1"
 rayon = "1.10"
 egui-toast = "0.19"
 dhat = { version = "0.3", optional = true }
