--- a/logcrab-system.desktop
+++ b/logcrab-system.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=LogCrab
 GenericName=Log Analyzer
-Comment=Intelligent log anomaly explorer with pattern matching
+Comment=Polyscopic anomaly explorer with pattern matching
 Exec=env -u WAYLAND_DISPLAY /usr/bin/logcrab %F
 Icon=logcrab
 Terminal=false
